# Dynamic-Chess

./: .gitignore  Tailwind-Sync.sh  app.py  chessEngine.py  icons.py  pyproject.toml  readme.md  tailwind.config.js
chess-app/: pyproject.toml
chess-app/src/chess_app/: __init__.py  chessEngine.py  config.json  default_config.json  icons.py  piece_setups.py  settings_json_handler.py
chess-app/src/chess_app/templates/: .copy.settings.html  base.html  chess.html  index.html  settings.html
templates/: base.html  chess.html  index.html
