[tool.poetry]
name = "chess-app"
version = "0.1.0"
description = ""
authors = ["Riley Smith <Rileys1000@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.15.1"
jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
start = "chess_app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
